fix: update sidebar background color and enhance units group styling for better visibility

--- a/css/simulation.css
+++ b/css/simulation.css
@@ -44,7 +44,7 @@ main {
 }
 
 main .sidebar {
-    background-color: #0a0a0a;
+    background-color: #0C0C0C;
     display: flex;
     flex-direction: column;
     flex: 1 1 20%;
@@ -87,4 +87,16 @@ main .sidebar .header ._grade {
 
 main .sidebar .header ._grade:hover {
     background-color: #303030;
+}
+
+main .sidebar .units-group {
+    font-size: 2rem;
+    font-weight: bolder;
+    color: #ffffff;
+
+    margin-top: 3.6rem
+}
+
+main .sidebar .units-group .unit {
+    padding: 2rem 3.8rem;
 }
